@@ -8,6 +8,7 @@ noinst_HEADERS= \
 	exporter.h \
 	exporttoimagedialog.h \
 	exporttolatexdialog.h \
+	exporttosvgdialog.h \
 	filter.h \
 	filters-common.h \
 	kgeo-filter.h \
@@ -16,6 +17,7 @@ noinst_HEADERS= \
 	kseg-filter.h \
 	latexexporter.h \
 	native-filter.h \
+	svgexporter.h \
 	drgeo-filter.h \
 	drgeo-filter-chooser.h
 libfilters_la_SOURCES= \
@@ -25,12 +27,15 @@ libfilters_la_SOURCES= \
 	exporttoimagedialogbase.ui \
 	exporttolatexdialog.cc \
 	exporttolatexdialogbase.ui \
+	exporttosvgdialog.cc \
+	exporttosvgdialogbase.ui \
 	filter.cc \
 	filters-common.cc \
 	kgeo-filter.cc \
 	kseg-filter.cc \
 	latexexporter.cc \
 	native-filter.cc \
+	svgexporter.cc \
 	drgeo-filter.cc \
 	drgeo-filter-chooser.cc \
 	drgeo-filter-chooserbase.ui
