@@ -1,0 +1,46 @@
+// exporttosvgdialog.h
+// Copyright (C)  2004  Pino Toscano <toscano.pino@tiscali.it>
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+// 02111-1307, USA.
+
+#ifndef EXPORTTOSVGDIALOG_H
+#define EXPORTTOSVGDIALOG_H
+
+#include "exporttosvgdialogbase.h"
+
+class KigPart;
+class KigWidget;
+
+class ExportToSVGDialog
+  : public ExportToSVGDialogBase
+{
+  Q_OBJECT
+
+  KigWidget* mv;
+  const KigPart* mpart;
+
+public:
+  ExportToSVGDialog( KigWidget* v, const KigPart* part );
+  ~ExportToSVGDialog();
+  QString fileName();
+  bool showAxes();
+  bool showGrid();
+public slots:
+  void slotOKPressed();
+  void slotCancelPressed();
+};
+
+#endif
