@@ -61,6 +61,7 @@
 	<Action name="objects_new_circlebcp" />
 	<Action name="objects_new_circlebtp" />
 	<Action name="objects_new_circlebps" />
+	<Action name="objects_new_circlebpd" />
 	<Action name="objects_new_circlebcl" />
 	<Action name="objects_new_arcbtp" />
 	<Action name="objects_new_arcbcpa" />
@@ -199,6 +200,7 @@
     <Action name="objects_new_circlebcp" />
     <Action name="objects_new_circlebtp" />
     <Action name="objects_new_circlebps" />
+    <Action name="objects_new_circlebpd" />
     <Action name="objects_new_arcbtp" />
     <ActionList name="user_circle_types" />
   </ToolBar>
